# rich-metadata

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/rich_metadata/: __init__.py  cli.py  display.py  images.py  navigator.py
tests/: test_cli.py  test_display.py  test_navigator.py
