[build-system]
requires = ["uv-build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rich-metadata"
version = "0.1.0"
authors = [
  { name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" },
]
description = "A Rich-based TUI toolkit for building metadata browsers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "rich>=14.0.0",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/gabriel-jung/rich-metadata"
Repository = "https://github.com/gabriel-jung/rich-metadata"

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022", "B904"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.0",
    "ruff>=0.14.3",
]
